Minor + Old Norse vowels
Minor updates
1/2 of Old Norse phonetics implemented

--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Wordsmith</title>
+    <script src="index.js"></script>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
+
 <body style="background: white;">
+    <form></form>
+        <label for="phonetics">Phonetics</label>
+        <select name="phonetics" id="phonetics">
+            <option value="ol">Old Norse</option>
+            <option value="en">English</option>
+            <option value="sp">Spanish</option>
+            <option value="fr">French</option>
+        </select>
+        <br><br>
+        <a href="" id="ph">Next</a>
+    </form>
 </body>
+
 </html>
