--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form>
         <h1 style="top: 10%">Phonetics</h1>
         <select name="phonetics" id="phonetics">
-            <option value="n/a">Click me to select language to take phonetics from.</option>
+            <option value="n/a">Click me to select phonetics.</option>
             <option value="ol">Old Norse</option>
             <option value="en">English</option>
             <option value="sp">Spanish</option>
