Start on pronouns feature
Pronouns start

--- a/pronouns.html
+++ b/pronouns.html
@@ -11,8 +11,14 @@
 
 <body style="background: white;">
     <h1 style="top: 10%">Pronouns</h1>
-    <div class="bob-on-hover">
-        <a onclick="ph()">&#9758;</a>
+    <div>
+        <input id="pronouns" type="text"></input>
+        <br>
+        <a style="font-size: 20px" onclick="pr()">&#65122;</a>
+        <br>
+        <div class="bob-on-hover">
+            <a href="">&#9758;</a>
+        </div>
     </div>
 </body>
 
