--- a/pronouns.html
+++ b/pronouns.html
@@ -16,6 +16,8 @@
         <br>
         <a style="font-size: 20px" onclick="pr()">&#65122;</a>
         <br>
+        <div id="main" style="white-space: nowrap">
+        </div>
         <div class="bob-on-hover">
             <a href="">&#9758;</a>
         </div>
