End of day commit
All work done recently

--- a/pronouns.html
+++ b/pronouns.html
@@ -19,7 +19,7 @@
         <div id="main" style="white-space: nowrap">
         </div>
         <div class="bob-on-hover">
-            <a href="">&#9758;</a>
+            <a onclick="pr_submit()">&#9758;</a>
         </div>
     </div>
 </body>
