--- a/pronouns.html
+++ b/pronouns.html
@@ -12,7 +12,7 @@
 <body style="background: white;">
     <h1 style="top: 10%">Pronouns</h1>
     <div>
-        <input id="pronouns" type="text"></input>
+        <input id="pr_input" type="text"></input>
         <br>
         <a style="font-size: 20px" onclick="pr()">&#65122;</a>
         <br>
