Started work on conjugation
Wish me luck

--- a/conjugation.html
+++ b/conjugation.html
@@ -10,8 +10,7 @@
 </head>
 
 <body style="background: white;">
-    <h1 style="top: 10%">Pronouns</h1>
-    <p>Type the name of the pronoun in English, then press the + button. Then, type the translation of the pronoun on the line.</p>
+    <h1 style="top: 10%">Conjugation</h1>
     <div>
         <input id="pr_input" type="text"></input>
         <br>
