--- a/conjugation.html
+++ b/conjugation.html
@@ -11,15 +11,16 @@
 
 <body style="background: white;">
     <h1 style="top: 10%">Conjugation</h1>
+    <p>Enter the names of groups of verbs in the box and click the + button to add it. Type the translations for the ends of verbs for each pronoun on the lines. If you don't want conjugation, click the x button then move on.</p>
     <div>
-        <input id="pr_input" type="text"></input>
+        <input id="con_input" type="text"></input>
         <br>
-        <a style="font-size: 20px" onclick="pr()">&#65122;</a>
+        <a style="font-size: 20px" onclick="con()">&#65122;</a>
         <br>
         <div id="main" style="white-space: nowrap">
         </div>
         <div class="bob-on-hover">
-            <a onclick="pr_submit()">&#9758;</a>
+            <a onclick="con_submit()">&#9758;</a>
         </div>
     </div>
 </body>
