Started sentence structure

--- a/sentence.html
+++ b/sentence.html
@@ -11,16 +11,9 @@
 
 <body style="background: white;">
     <h1 style="top: 10%">Sentence Structure</h1>
-    <div>
-        <input id="con_input" type="text"></input>
-        <br>
-        <a style="font-size: 20px" onclick="con()">&#65122;</a>
-        <br>
-        <div id="main" style="white-space: nowrap">
-        </div>
-        <div class="bob-on-hover">
-            <a onclick="con_submit()">&#9758;</a>
-        </div>
+    
+    <div class="bob-on-hover">
+        <a onclick="sen_submit()">&#9758;</a>
     </div>
 </body>
 
