Checkbox styling and getting values of the sliders

--- a/sentence.html
+++ b/sentence.html
@@ -11,10 +11,18 @@
 
 <body style="background: white;">
     <h1 style="top: 10%">Sentence Structure</h1>
-    
+    <label class="switch">
+        <input id='adj' type="checkbox">
+        <span onclick="sen()" class="slider round"></span>
+    </label>
+    <div style="height: 10px;"></div>
+    <label class="switch">
+        <input id='pos' type="checkbox">
+        <span onclick="sen()"  class="slider round"></span>
+    </label>
+    <br>
     <div class="bob-on-hover">
         <a onclick="sen_submit()">&#9758;</a>
     </div>
 </body>
-
 </html>
