Lock system completed

--- a/sentence.html
+++ b/sentence.html
@@ -13,13 +13,15 @@
     <h1 style="top: 10%">Sentence Structure</h1>
     <label class="switch">
         <input id='adj' type="checkbox">
-        <span onclick="sen()" class="slider round"></span>
+        <span class="slider round"></span>
     </label>
     <div style="height: 10px;"></div>
     <label class="switch">
         <input id='pos' type="checkbox">
-        <span onclick="sen()"  class="slider round"></span>
+        <span class="slider round"></span>
     </label>
+    <div style="height: 10px;"></div>
+    <input type="text" onclick="sen()" placeholder="e.g VSO, OSV etc."></input>
     <br>
     <div class="bob-on-hover">
         <a onclick="sen_submit()">&#9758;</a>
