Tweaks and sentence structure finished
Starting adjectives

--- a/sentence.html
+++ b/sentence.html
@@ -11,17 +11,19 @@
 
 <body style="background: white;">
     <h1 style="top: 10%">Sentence Structure</h1>
+    <p>Adjective before/after nouns</p>
     <label class="switch">
         <input id='adj' type="checkbox">
         <span class="slider round"></span>
     </label>
     <div style="height: 10px;"></div>
+    <p>Pre/Postpositions</p>
     <label class="switch">
         <input id='pos' type="checkbox">
         <span class="slider round"></span>
     </label>
     <div style="height: 10px;"></div>
-    <input type="text" onclick="sen()" placeholder="e.g VSO, OSV etc."></input>
+    <input id="sen" type="text" placeholder="e.g VSO, OSV etc."></input>
     <br>
     <div class="bob-on-hover">
         <a onclick="sen_submit()">&#9758;</a>
