--- a/pronouns.html
+++ b/pronouns.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html id="document">
 
 <head>
+	<script src="https://kit.fontawesome.com/04abc47f98.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <title>Wordsmith</title>
     <script src="index.js"></script>
@@ -9,7 +10,8 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 
-<body style="background: white;">
+<body>
+	<i onclick="dark()"class="fas fa-moon"></i>
     <h1 style="top: 10%">Pronouns</h1>
     <p>Type the name of the pronoun in English, then press the + button. Then, type the translation of the pronoun on the line.</p>
     <div>
