--- a/sentence.html
+++ b/sentence.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<script src="https://kit.fontawesome.com/04abc47f98.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <title>Wordsmith</title>
     <script src="index.js"></script>
@@ -9,7 +10,8 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 
-<body style="background: white;">
+<body>
+	<i onclick="dark()"class="fas fa-moon"></i>
     <h1 style="top: 10%">Sentence Structure</h1>
     <p>Adjective before/after nouns</p>
     <label class="switch">
