--- a/conjugation.html
+++ b/conjugation.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html id="document">
 
 <head>
+	<script src="https://kit.fontawesome.com/04abc47f98.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <title>Wordsmith</title>
     <script src="index.js"></script>
@@ -9,7 +10,8 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 
-<body style="background: white;">
+<body>
+	<i onclick="dark()" class="fas fa-moon"></i>
     <h1 style="top: 10%">Conjugation</h1>
     <p>Enter the names of groups of verbs in the box and click the + button to add it. Type the translations for the ends of verbs for each pronoun on the lines. If you don't want conjugation, click the x button then move on.</p>
     <div>
