Giving up on declensions for now
They might happen after the lexicon phase.

--- a/declension.html
+++ b/declension.html
@@ -13,15 +13,16 @@
 <body>
 	<i onclick="dark()"class="fas fa-moon"></i>
     <h1 style="top: 10%">Declensions</h1>
+    <p>Add new declensions and write the word endings in for each. </p>
     <div>
-        <input id="con_input" type="text"></input>
+        <input id="dec_input" type="text"></input>
         <br>
         <a style="font-size: 20px" onclick="con()">&#65122;</a>
         <br>
         <div id="main" style="white-space: nowrap">
         </div>
         <div class="bob-on-hover">
-            <a onclick="con_submit()">&#9758;</a>
+            <a onclick="dec_submit()">&#9758;</a>
         </div>
     </div>
 </body>
