Need to work on other things before Lexicon

--- a/lexicon.html
+++ b/lexicon.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>Wordsmith</title>
     <script src="index.js"></script>
+    <script src="lexicon.js"></script>
     <link rel="stylesheet" href="style.css">
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
@@ -13,7 +14,8 @@
 <body>
 	<i onclick="dark()"class="fas fa-moon"></i>
         <h1 style="top: 10%">Lexicon</h1>
-        <br><br>
+	<p>Here, you will enter the translations for words in your language. Currently, you translate the 1000 most used words in English into your language, but in the future you'll be able to choose how many words to translate.</p>
+        <br>
         <div class="bob-on-hover">
             <a onclick="ph()">&#9758;</a>
         </div>
