Pronouns codebase cut down

--- a/pronouns.html
+++ b/pronouns.html
@@ -17,12 +17,12 @@
     <div>
         <input id="pr_input" type="text"></input>
         <br>
-        <a style="font-size: 20px" onclick="pr()">&#65122;</a>
+        <a style="font-size: 20px" onclick="get('pr_input',1,pronouns,'pronouns',pronouns);">&#65122;</a>
         <br>
         <div id="main" style="white-space: nowrap">
         </div>
         <div class="bob-on-hover">
-            <a onclick="pr_submit()">&#9758;</a>
+            <a onclick="submit(1, 'pronouns',t_pronouns,'t_pronouns',t_pronouns,'conjugation.html');">&#9758;</a>
         </div>
     </div>
 </body>
