Conjugation now works along with optimised codebase

--- a/conjugation.html
+++ b/conjugation.html
@@ -17,7 +17,7 @@
     <div>
         <input id="con_input" type="text"></input>
         <br>
-	<a style="font-size: 20px" onclick="conjugation = true;get('con_input', 2, conjugation_groups,'conjugation_groups',conjugation_groups)">&#65122;</a>
+	<a style="font-size: 20px" onclick="get('con_input', 2, conjugation_groups,'conjugation_groups',conjugation_groups,'pronouns')">&#65122;</a>
         <br>
         <div id="main" style="white-space: nowrap">
         </div>
