Subfolders + Conjugation rewrite done

--- a/pages/conjugation.html
+++ b/pages/conjugation.html
@@ -22,7 +22,7 @@
         <div id="main" style="white-space: nowrap">
         </div>
         <div class="bob-on-hover">
-            <a onclick="con_submit()">&#9758;</a>
+            <a onclick="submit(2, 'conjugation_groups', t_conjugations, 't_conjugations', t_conjugations, "sentence.html", 'pronouns')">&#9758;</a>
         </div>
     </div>
 </body>
