--- a/pages/adjectives.html
+++ b/pages/adjectives.html
@@ -4,8 +4,8 @@
 	<script src="https://kit.fontawesome.com/04abc47f98.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <title>Wordsmith</title>
-    <script src="index.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="../scripts/index.js"></script>
+<link rel="stylesheet" href="../style.css"> 
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 <body>
