--- a/pages/lexicon.html
+++ b/pages/lexicon.html
@@ -4,10 +4,10 @@
 <head>
 	<script src="https://kit.fontawesome.com/04abc47f98.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
+    <script src="../scripts/index.js"></script>
+<link rel="stylesheet" href="../style.css"> 
     <title>Wordsmith</title>
-    <script src="index.js"></script>
-    <script src="lexicon.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <script src="../scripts/lexicon.js"></script>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 
