--- a/pages/pronouns.html
+++ b/pages/pronouns.html
@@ -4,9 +4,9 @@
 <head>
 	<script src="https://kit.fontawesome.com/04abc47f98.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
+    <script src="../scripts/index.js"></script>
+<link rel="stylesheet" href="../style.css"> 
     <title>Wordsmith</title>
-    <script src="index.js"></script>
-    <link rel="stylesheet" href="style.css">
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
 </head>
 
